--- a/ConvenienceSystemBackendServer/ConvenienceSystemBackendServer.csproj
+++ b/ConvenienceSystemBackendServer/ConvenienceSystemBackendServer.csproj
@@ -36,10 +36,6 @@
     <Reference Include="MySql.Data.Entity">
       <HintPath>..\..\Visual Studio 2012\mysql-connector-net-6.9.4-noinstall\v4.0\MySql.Data.Entity.dll</HintPath>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=7.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.7.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -55,6 +51,9 @@
     </Reference>
     <Reference Include="MySql.Web">
       <HintPath>..\..\Visual Studio 2012\mysql-connector-net-6.9.4-noinstall\v4.0\MySql.Web.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
